plugins {
    id 'com.android.application'
    id 'com.google.gms.google-services'
}

android {
    compileSdkVersion 30
    buildToolsVersion "30.0.3"

    defaultConfig {
        applicationId "com.sar.taxvault"
        minSdkVersion 23
        targetSdkVersion 29
        versionCode 1
        versionName "1.0"
        multiDexEnabled true
        vectorDrawables.useSupportLibrary = true
        manifestPlaceholders = [pdftronLicenseKey:PDFTRON_LICENSE_KEY]
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    //viewBinding
    buildFeatures {
        viewBinding true
    }
}

dependencies {

    // ... Anything that was already here
    implementation "com.pdftron:pdftron:9.1.2"
    implementation "com.pdftron:tools:9.1.2"

    implementation 'androidx.multidex:multidex:2.0.1'

    implementation 'androidx.appcompat:appcompat:1.2.0'
    implementation 'com.google.android.material:material:1.3.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'

    //Firebase
    implementation platform('com.google.firebase:firebase-bom:28.4.1')
    implementation 'com.google.firebase:firebase-analytics'
    implementation 'com.google.firebase:firebase-database:20.0.2'
    implementation 'com.google.firebase:firebase-auth:21.0.1'
    implementation 'com.google.firebase:firebase-messaging:22.0.0'

//    implementation "androidx.datastore:datastore-rxjava3:1.0.0"
    implementation "androidx.datastore:datastore-preferences-rxjava3:1.0.0"

    //circle imageview
    implementation 'de.hdodenhof:circleimageview:3.1.0'
    implementation 'com.makeramen:roundedimageview:2.3.0'
    implementation 'nl.psdcompany:duo-navigation-drawer:3.0.0'

    //size
    implementation 'com.intuit.sdp:sdp-android:1.0.6'
    implementation 'com.intuit.ssp:ssp-android:1.0.6'

    //snack bar
    implementation 'com.williammora:snackbar:1.4.0'

    implementation 'androidx.biometric:biometric:1.0.1'

    implementation "androidx.datastore:datastore-preferences:1.0.0"

    implementation 'com.hbb20:ccp:2.6.0'


    //permissions
    implementation 'com.nabinbhandari.android:permissions:3.8'

    //glide
    implementation 'com.github.bumptech.glide:glide:4.12.0'
    implementation 'androidx.navigation:navigation-fragment:2.3.5'
    implementation 'androidx.navigation:navigation-ui:2.3.5'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
    
    //permissions
    implementation 'pub.devrel:easypermissions:3.0.0'
    implementation 'com.google.firebase:firebase-storage:20.0.0'

    //progress Bar
    implementation 'com.mikhaellopez:circularprogressbar:3.1.0'

    //networking
    implementation 'com.amitshekhar.android:android-networking:1.0.2'
    implementation "android.arch.lifecycle:extensions:1.1.0"

    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"

    //google
    implementation 'com.google.android.gms:play-services-auth:19.2.0'
    implementation 'com.google.gms:google-services:4.1.0'

    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'

    implementation("org.greenrobot:eventbus:3.3.1")

    //pinch to zoom image view
    implementation 'com.jsibbold:zoomage:1.3.1'

    //retro
    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.4.1'

    //facebook
    implementation 'com.facebook.android:facebook-login:+'
    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'

    //Stripe Android SDK
    implementation 'com.stripe:stripe-android:16.1.1'

}